kubernetes/apps/web/vw/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - image: vaultwarden/server:1.30.1
          name: vaultwarden
          resources:
            requests:
              cpu: 100m
              memory: 0.2Gi
            limits:
              memory: 0.6Gi
          ports:
            - containerPort: 80
              name: http
            - containerPort: 3012
              name: websocket
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
