kubernetes/apps/web/vw/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 3012
      targetPort: 3012
      name: websocket
  selector:
    app: vaultwarden
